--- a/Easy4net/Easy4net.csproj
+++ b/Easy4net/Easy4net.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Orm</RootNamespace>
-    <AssemblyName>Orm</AssemblyName>
+    <AssemblyName>Easy4net</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -53,7 +53,9 @@
     <Compile Include="Common\DynamicCalls.cs" />
     <Compile Include="Common\IdInfo.cs" />
     <Compile Include="Common\Map.cs" />
+    <Compile Include="Common\ParamMap.cs" />
     <Compile Include="Common\ReflectionHelper.cs" />
+    <Compile Include="Common\SQLBuilderHelper.cs" />
     <Compile Include="Common\TableInfo.cs" />
     <Compile Include="Common\TypeUtils.cs" />
     <Compile Include="CustomAttributes\ColumnAttribute.cs" />
